Fix wordwrapping in menu selectors

--- a/plugins/CoreHome/stylesheets/layout.less
+++ b/plugins/CoreHome/stylesheets/layout.less
@@ -250,6 +250,8 @@ nav {
           padding: 15px 22px 11px 45px;
           font-size: 13px;
           font-weight: normal;
+          word-wrap: break-word;
+          word-break: break-all;
 
           &:hover, &:focus {
             color: @theme-color-menu-contrast-textActive;
